--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,286 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="shortcut icon" href="./icons/namu-favicon.png">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
+  <body class="page__body">
+    <header class="header">
+      <img
+        src="./images/header-bg.png"
+        alt="NAMU-logo"
+        class="header__bg"
+      >
+
+      <div class="header__title__div">
+        <h1 class="header__main-title">ХУДОЖНІЙ МУЗЕЙ</h1>
+
+        <a class="header__tickets-link" href="#">КВИТКИ</a>
+      </div>
+
+      <a class="header__burger" href="#menu"></a>
+
+      <a href="#" class="header__logo">
+        <img
+          src="./images/logo.svg"
+          alt="NAMU-logo"
+        >
+      </a>
+
+      <div class="header__bg"></div>
+    </header>
+
+    <aside class="aside page__menu" id="menu">
+      <div class="aside__top">
+        <a class="aside__close-icon aside__text" href="#"></a>
+
+        <div>
+          <div class="aside__gallery">
+            <a class="aside__titles" href="#gallery">Галерея</a>
+          </div>
+
+          <div class="aside__actual">
+            <a class="aside__titles" href="#actual">Виставки та події</a>
+          </div>
+        </div>
+
+        <div>
+          <div class="aside__about-us">
+            <a class="aside__titles" href="#about-us">Про Hac</a>
+          </div>
+
+          <div class="aside__contacts">
+            <a class="aside__titles" href="#contacts">Контакти</a>
+          </div>
+        </div>
+      </div>
+
+      <div class="aside__line"></div>
+
+      <div class="aside__work">
+        <p class="aside__text aside__title">Графік роботи</p>
+
+        <ul class="aside__days">
+          <li class="aside__text"><span class="aside__time">12:00 — 20:00</span> середа</li>
+
+          <li class="aside__text"><span class="aside__time">12:00 — 20:00</span> четвер</li>
+
+          <li class="aside__text"><span class="aside__time">12:00 — 20:00</span> п’ятниця</li>
+
+          <li class="aside__text"><span class="aside__time">11:00 — 19:00</span> субота</li>
+
+          <li class="aside__text"><span class="aside__time">11:00 — 19:00</span> неділя</li>
+        </ul>
+      </div>
+
+      <p class="aside__text aside__p"><span class="aside__time">Вихідні:</span> понеділок, вівторок <br>Kaca припиняє роботу за 1 годину до закриття музею</p>
+    </aside>
+
+    <main class="main">
+      <div class="scroll-to-top" id="scrollToTop"></div>
+
+      <section>
+        <article class="actual" id="actual">
+          <h2 class="actual__title-h2">Актуальні події</h2>
+
+          <img
+            src="./images/picture-1.png"
+            alt="landscape-art"
+            class="actual__picture main__picture"
+          >
+
+          <div class="actual__group">
+            <div class="actual__date-description">
+              <p class="actual__date-description-title">ВИСТАВКА</p>
+
+              <data class="actual__date-description-date">26.08-29.11.2019</data>
+            </div>
+
+            <h3 class="actual__title-h3 actual__title-h3--after-1">Йду i повертаюсь</h3>
+
+            <p class="actual__p-description">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+          </div>
+        </article>
+
+        <article class="actual">
+          <img
+            src="./images/picture-2.png"
+            alt="the-girl-and-the-peacock-art"
+            class="actual__picture main__picture"
+          >
+
+          <div class="actual__group">
+            <div class="actual__date-description">
+              <p class="actual__date-description-title">ВИСТАВКА</p>
+
+              <data class="actual__date-description-date">26.08-29.11.2019</data>
+            </div>
+
+            <h3 class="actual__title-h3 actual__title-h3--after-2">I спогади i мрії</h3>
+
+            <p class="actual__p-description">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «I спогади i мрії».</p>
+          </div>
+        </article>
+      </section>
+
+
+      <section class="actual-last">
+        <img
+          src="./images/picture-3.png"
+          alt="sunset-art"
+          class="actual-last__picture"
+        >
+
+        <div class="actual-last__card">
+          <div class="actual__date-description actual-last__description-div">
+            <p class="actual__date-description-title actual-last__title">ЛЕКЦІЯ</p>
+
+            <data class="actual__date-description-date actual-last__date">26/08/2019 - 11:00</data>
+          </div>
+
+          <h3 class="actual__title-h3 actual-last__art-title">Від класицизму до романтизму</h3>
+        </div>
+      </section>
+
+      <section>
+        <article class="gallery" id="gallery">
+          <h2 class="actual__title-h2 gallery__h2">Галерея</h2>
+          <img
+            src="./images/picture-4.png"
+            alt="woman-in-dress-art"
+            class="gallery__picture-4 main__picture"
+          >
+          <img
+            src="./images/picture-5.png"
+            alt="woman-in-dress-art"
+            class="gallery__picture-5 main__picture"
+          >
+          <img
+            src="./images/picture-6.png"
+            alt="woman-in-dress-art"
+            class="gallery__picture-6 main__picture"
+          >
+          <img
+            src="./images/picture-7.png"
+            alt="woman-in-dress-art"
+            class="gallery__picture-7 main__picture"
+          >
+          <img
+            src="./images/picture-8.png"
+            alt="woman-in-dress-art"
+            class="gallery__picture-8 main__picture"
+          >
+          <div class="gallery__dot-group"></div>
+        </article>
+      </section>
+
+      <section class="subscribe" id="about-us">
+        <h2 class="actual__title-h2 subscribe__h2">Підписка</h2>
+
+        <p class="subscribe__p">Бути в курсі всіх актуальних подій та останніх новин.</p>
+
+        <form
+          action="#"
+          method="get"
+          onsubmit="this.reset(); return false;"
+          class="subscribe__form"
+        >
+
+          <input
+            type="email"
+            placeholder="E-mail"
+            required
+            class="subscribe__input"
+          >
+          <button class="subscribe__btn"></button>
+        </form>
+      </section>
+
+      <section class="schedule">
+        <a href="#">
+          <img
+            src="./images/logo.svg"
+            alt="NAMU-logo"
+            class="schedule__logo"
+          >
+        </a>
+
+        <div class="schedule__socials">
+          <a
+            href="https://www.facebook.com/namu.museum/"
+            class="schedule__fb"
+            target="_blank"
+          >
+            <img src="./icons/icon-fb.svg" alt="icon-fb">
+          </a>
+
+          <a
+            href="https://www.instagram.com/namu.museum/"
+            class="schedule__instagram"
+            target="_blank"
+          >
+            <img src="./icons/icon-instagram.svg" alt="icon-instagram">
+          </a>
+        </div>
+
+        <div class="schedule__work" id="contacts">
+          <p class="schedule__title">Графік роботи</p>
+
+          <ul class="schedule__days">
+            <li class="schedule__day"><span class="schedule__time">12:00 — 20:00</span> середа</li>
+
+            <li class="schedule__day"><span class="schedule__time">12:00 — 20:00</span> четвер</li>
+
+            <li class="schedule__day"><span class="schedule__time">12:00 — 20:00</span> п’ятниця</li>
+
+            <li class="schedule__day"><span class="schedule__time">11:00 — 19:00</span> субота</li>
+
+            <li class="schedule__day"><span class="schedule__time">11:00 — 19:00</span> неділя</li>
+
+            <li class="schedule__day--p"><span class="schedule__day">Вихідні:</span> понеділок, вівторок <br>Kaca припиняє роботу за 1 годину до закриття музею</li>
+          </ul>
+        </div>
+
+        <div class="schedule__contacts">
+          <p class="schedule__title">Контакти:</p>
+
+          <ul class="schedule__addresses">
+            <li class="schedule__adres">вул. M. Грушевського, 6;</li>
+
+            <li class="schedule__adres">Київ, 01001</li>
+
+            <li class="schedule__adres">тел. <a class="schedule__href" href="tel:+380442781357">+38 (044) 278-13-57</a></li>
+
+            <li class="schedule__adres">факс <a class="schedule__href" href="tel:+380442787454">+38 (044) 278-74-54</a></li>
+
+            <li class="schedule__adres">e-mail: <a class="schedule__href" href="mailto:info@namu.kyiv.ua">info&#64;namu.kyiv.ua</a></li>
+          </ul>
+        </div>
+
+        <div class="schedule__line"></div>
+
+        <a class="schedule__href schedule__galery schedule__link" href="#gallery">Галерея</a>
+
+        <a class="schedule__href schedule__about-us schedule__link" href="#">Про Hac</a>
+
+        <a class="schedule__href schedule__events schedule__link" href="#">Виставки та події</a>
+
+        <a class="schedule__href schedule__contact schedule__link" href="#contacts">Контакти</a>
+
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p class="footer__dev footer__designer">Designed by Zhyriada Marina</p>
+
+      <p class="footer__dev footer__developer">Developed by Volodymyr Kolisnichenko</p>
+
+      <p class="footer__dev footer__copyright">Copyright © 2023. All Rights Reserved.</p>
+    </footer>
+
+    <script src="../src/scripts/main.js"></script>
   </body>
 </html>
