changed width and hover

--- a/src/index.html
+++ b/src/index.html
@@ -34,49 +34,53 @@
     </header>
 
     <aside class="aside page__menu" id="menu">
-      <div class="aside__top">
-        <a class="aside__close-icon aside__text" href="#"></a>
+      <div class="aside__content">
+        <div class="aside__top">
+          <a class="aside__close-icon aside__text" href="#"></a>
 
-        <div>
-          <div class="aside__gallery">
-            <a class="aside__titles" href="#gallery">Галерея</a>
+          <div>
+            <div class="aside__gallery">
+              <a class="aside__titles" href="#gallery">Галерея</a>
+            </div>
+
+            <div class="aside__actual">
+              <a class="aside__titles" href="#actual">Виставки та події</a>
+            </div>
           </div>
 
-          <div class="aside__actual">
-            <a class="aside__titles" href="#actual">Виставки та події</a>
+          <div>
+            <div class="aside__about-us">
+              <a class="aside__titles" href="#about-us">Про Hac</a>
+            </div>
+
+            <div class="aside__contacts">
+              <a class="aside__titles" href="#contacts">Контакти</a>
+            </div>
           </div>
         </div>
 
-        <div>
-          <div class="aside__about-us">
-            <a class="aside__titles" href="#about-us">Про Hac</a>
-          </div>
+        <div class="aside__line"></div>
 
-          <div class="aside__contacts">
-            <a class="aside__titles" href="#contacts">Контакти</a>
-          </div>
+        <div class="aside__work">
+          <p class="aside__text aside__title">Графік роботи</p>
+
+          <ul class="aside__days">
+            <li class="aside__text"><span class="aside__time">12:00 — 20:00</span> середа</li>
+
+            <li class="aside__text"><span class="aside__time">12:00 — 20:00</span> четвер</li>
+
+            <li class="aside__text"><span class="aside__time">12:00 — 20:00</span> п’ятниця</li>
+
+            <li class="aside__text"><span class="aside__time">11:00 — 19:00</span> субота</li>
+
+            <li class="aside__text"><span class="aside__time">11:00 — 19:00</span> неділя</li>
+          </ul>
         </div>
+
+        <p class="aside__text aside__p"><span class="aside__time">Вихідні:</span> понеділок, вівторок <br>Kaca припиняє роботу за 1 годину до закриття музею</p>
+
       </div>
 
-      <div class="aside__line"></div>
-
-      <div class="aside__work">
-        <p class="aside__text aside__title">Графік роботи</p>
-
-        <ul class="aside__days">
-          <li class="aside__text"><span class="aside__time">12:00 — 20:00</span> середа</li>
-
-          <li class="aside__text"><span class="aside__time">12:00 — 20:00</span> четвер</li>
-
-          <li class="aside__text"><span class="aside__time">12:00 — 20:00</span> п’ятниця</li>
-
-          <li class="aside__text"><span class="aside__time">11:00 — 19:00</span> субота</li>
-
-          <li class="aside__text"><span class="aside__time">11:00 — 19:00</span> неділя</li>
-        </ul>
-      </div>
-
-      <p class="aside__text aside__p"><span class="aside__time">Вихідні:</span> понеділок, вівторок <br>Kaca припиняє роботу за 1 годину до закриття музею</p>
     </aside>
 
     <main class="main">
