--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,50 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Museum</title>
+    <link rel="stylesheet" href="./styles/index.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link
+      rel="preconnect"
+      href="https://fonts.gstatic.com"
+      crossorigin="anonymous"
+    >
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Montserrat:wght@400;700&display=swap" rel="stylesheet">
   </head>
   <body>
-    <h1>Hello Mate Academy</h1>
+    <!-- Header  -->
+    <div class="header">
+      <div class="header__wrapper">
+        <div class="header-bg">
+          <img
+            class="header__photo"
+            src="./images/header-bg.png"
+            alt="header photo"
+          >
+          <img
+            class="header__logo logo"
+            src="./images/logo.png"
+            alt="logo"
+          >
+        </div>
+        <a href="#menu" class="header__menu">
+          <img src="./icons/menu.png" alt="menu">
+        </a>
+        <div class="header__content">
+          <h1 class="header__content-title">ХУДОЖНІЙ
+            <br>
+            МУЗЕЙ
+          </h1>
+          <div class="header__content-button">
+            <a href="#" class="header__content-link">КВИТКИ</a>
+            <a href="#" class="header__content-arrow">
+              <img src="./icons/arrow.png" alt="arrow button">
+            </a>
+          </div>
+        </div>
+      </div>
+    </div>
+    <!-- #Header  -->
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
