--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,12 @@
       <div class="header__title__div">
         <h1 class="header__main-title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
-        <a class="header__tickets-link" href="#">КВИТКИ</a>
+        <a class="header__tickets-link" href="#actual">КВИТКИ</a>
       </div>
 
       <a class="header__burger" href="#menu"></a>
 
-      <a href="#" class="header__logo">
+      <a href="#actual" class="header__logo">
         <img
           src="./images/logo.svg"
           alt="NAMU-logo"
@@ -89,11 +89,13 @@
         <article class="actual" id="actual">
           <h2 class="actual__title-h2">Актуальні події</h2>
 
-          <img
-            src="./images/picture-1.png"
-            alt="landscape-art"
-            class="actual__picture main__picture"
-          >
+          <div class="actual__picture-wrapper">
+            <img
+              src="./images/picture-1.png"
+              alt="landscape-art"
+              class="actual__picture main__picture"
+            >
+          </div>
 
           <div class="actual__group">
             <div class="actual__date-description">
@@ -109,11 +111,13 @@
         </article>
 
         <article class="actual">
-          <img
-            src="./images/picture-2.png"
-            alt="the-girl-and-the-peacock-art"
-            class="actual__picture main__picture"
-          >
+          <div class="actual__picture-wrapper">
+            <img
+              src="./images/picture-2.png"
+              alt="the-girl-and-the-peacock-art"
+              class="actual__picture main__picture"
+            >
+          </div>
 
           <div class="actual__group">
             <div class="actual__date-description">
@@ -151,31 +155,47 @@
       <section>
         <article class="gallery" id="gallery">
           <h2 class="actual__title-h2 gallery__h2">Галерея</h2>
-          <img
-            src="./images/picture-4.png"
-            alt="woman-in-dress-art"
-            class="gallery__picture-4 main__picture"
-          >
-          <img
-            src="./images/picture-5.png"
-            alt="woman-in-dress-art"
-            class="gallery__picture-5 main__picture"
-          >
-          <img
-            src="./images/picture-6.png"
-            alt="woman-in-dress-art"
-            class="gallery__picture-6 main__picture"
-          >
-          <img
-            src="./images/picture-7.png"
-            alt="woman-in-dress-art"
-            class="gallery__picture-7 main__picture"
-          >
-          <img
-            src="./images/picture-8.png"
-            alt="woman-in-dress-art"
-            class="gallery__picture-8 main__picture"
-          >
+
+          <div class="gallery__picture-wrapper-4">
+            <img
+              src="./images/picture-4.png"
+              alt="woman-in-dress-art"
+              class="gallery__picture-4 main__picture"
+            >
+          </div>
+
+          <div class="gallery__picture-wrapper-5">
+            <img
+              src="./images/picture-5.png"
+              alt="woman-in-dress-art"
+              class="gallery__picture-5 main__picture"
+            >
+          </div>
+
+          <div class="gallery__picture-wrapper-6">
+            <img
+              src="./images/picture-6.png"
+              alt="woman-in-dress-art"
+              class="gallery__picture-6 main__picture"
+            >
+          </div>
+
+          <div class="gallery__picture-wrapper-7">
+            <img
+              src="./images/picture-7.png"
+              alt="woman-in-dress-art"
+              class="gallery__picture-7 main__picture"
+            >
+          </div>
+
+          <div class="gallery__picture-wrapper-8">
+            <img
+              src="./images/picture-8.png"
+              alt="woman-in-dress-art"
+              class="gallery__picture-8 main__picture"
+            >
+          </div>
+
           <div class="gallery__dot-group"></div>
         </article>
       </section>
@@ -251,15 +271,35 @@
           <p class="schedule__title">Контакти:</p>
 
           <ul class="schedule__addresses">
-            <li class="schedule__adres">вул. M. Грушевського, 6;</li>
+            <li class="schedule__adres">
+              <a
+                href="https://www.google.com/maps?q=вул.+M.+Грушевського,+6"
+                target="_blank"
+                class="schedule__href"
+              >
+                вул. M. Грушевського, 6
+              </a>
+            </li>
 
             <li class="schedule__adres">Київ, 01001</li>
 
-            <li class="schedule__adres">тел. <a class="schedule__href" href="tel:+380442781357">+38 (044) 278-13-57</a></li>
+            <li class="schedule__adres">тел.
+              <a class="schedule__href" href="tel:+380442781357">
+                +38 (044) 278-13-57
+              </a>
+            </li>
 
-            <li class="schedule__adres">факс <a class="schedule__href" href="tel:+380442787454">+38 (044) 278-74-54</a></li>
+            <li class="schedule__adres">факс
+              <a class="schedule__href" href="tel:+380442787454">
+                +38 (044) 278-74-54
+              </a>
+            </li>
 
-            <li class="schedule__adres">e-mail: <a class="schedule__href" href="mailto:info@namu.kyiv.ua">info&#64;namu.kyiv.ua</a></li>
+            <li class="schedule__adres">e-mail:
+              <a class="schedule__href" href="mailto:info@namu.kyiv.ua">
+                info&#64;namu.kyiv.ua
+              </a>
+            </li>
           </ul>
         </div>
 
