--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,230 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
-  </body>
+
+<head>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <title>Title</title>
+  <link rel="stylesheet" href="./styles/main.scss">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link
+    href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@500;700&family=Montserrat:wght@400;700&display=swap"
+    rel="stylesheet">
+</head>
+
+<body>
+  <header class="header">
+    <nav class="nav">
+      <img class="menu" src="./images/project/menu.svg" alt="menu">
+      <h1 class="title__header">
+        NA
+        <br>
+        MU
+      </h1>
+    </nav>
+  </header>
+
+  <h2 class="title-1">
+    ХУДОЖНІЙ
+    <br>
+    МУЗЕЙ
+  </h2>
+
+  <div class="container">
+    <div class="rectangle">
+      <h3 class="rectangle__title">
+        КВИТКИ
+      </h3>
+    </div>
+    <div class="rectangle__arrow">
+      <img class="arrow" src="./images/project/arrow.svg" alt="arrow">
+    </div>
+  </div>
+
+  <main class="main">
+    <h2 class="title-secondary">
+      Актуальні
+      <br>
+      події
+    </h2>
+    <section class="section">
+      <img class="pictures picture-1" src="./images/project/picture_1.svg" alt="picture_1">
+      <div class="section__container">
+        <span class="span-title">
+          ВИСТАВКА
+        </span>
+        <span class="span-data">
+          26.08-29.11.2019
+        </span>
+      </div>
+      <div class="section__title__container">
+        <h3 class="section__title">
+          Йду і повертаюсь
+        </h3>
+        <div class="section__rectangle">
+
+        </div>
+      </div>
+      <p class="section__description">
+        Національний Художній Музей
+        України презентує унікальну частину
+        колекції Градобанку - українське
+        мистецтво другої половини
+        1980-1995 років.
+      </p>
+    </section>
+
+    <section class="section">
+      <img class="pictures picture-2" src="./images/project/picture_2.svg" alt="picture_2">
+      <div class="section__container">
+        <span class="span-title">
+          ВИСТАВКА
+        </span>
+        <span class="span-data">
+          26.08-29.11.2019
+        </span>
+      </div>
+      <div class="section__title__container">
+        <h3 class="section__title">
+          І спогади і мрії
+        </h3>
+        <div class="section__rectangle">
+
+        </div>
+      </div>
+      <p class="section__description">
+        Національний художній музей
+        України до 100 річчя від дня
+        народження видатної української
+        художниці Тетяни Яблонської
+        відкриває ретроспективну ювілейну
+        виставку «І спогади і мрії».
+      </p>
+    </section>
+
+    <div class="div">
+      <img class="pictures picture_3" src="./images/project/picture_3.svg" alt="picture_3">
+      <div class="div__info">
+        <div class="div__info__lesson">
+          ЛЕКЦІЯ
+        </div>
+        <div class="div__info__data">
+          26/08/2019 - 11:00
+        </div>
+      </div>
+    </div>
+    <div class="div__info__bottom">
+      <h3 class="div__info__title">Від класицизму до романтизму</h3>
+    </div>
+    <span class="title__galery">
+      Галерея
+    </span>
+
+    <section class="section galery">
+      <img class="pictures picture_4" src="./images/project/picture_4.svg" alt="picture_4">
+      <img class="galery__group" src="./images/project/group.svg" alt="group">
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="footer__background">
+      <h3 class="footer__title">Підписка</h3>
+      <p class="footer__description">
+        Бути в курсі всіх актуальних
+        подій та останніх новин.
+      </p>
+      <div class="input">
+        <input class="input__footer" placeholder="E-mail">
+        <div class="input__rectangle">
+          <img class="input__arrow" src="./images/project/arrow-black.svg" alt="arrow">
+        </div>
+      </div>
+    </div>
+
+    <div class="footer__menu">
+      <div class="footer__menu__title">
+        <span class="footer__menu-first">
+          NA
+          <br>
+          MU
+        </span>
+      </div>
+
+      <div class="footer__menu__icons">
+        <img class="footer__menu__icon-1" src="./images/project/facebook-logo.svg" alt="facebook-logo">
+        <img class="footer__menu__icon-2" src="./images/project/instagram-logo.svg" alt="instagram-logo">
+      </div>
+    </div>
+
+    <div class="footer__contact">
+      <div class="footer__contact__items grid">
+        <span class="footer__contact__graphic">
+          Графік роботи
+        </span>
+        <span class="footer__contact__title">
+          Контакти:
+        </span>
+      </div>
+
+      <div class="footer__contact--grid grid">
+        <div class="footer__contact__col--left">
+         <span class="footer__contact__span">12:00 — 20:00</span>
+         <h4 class="footer__contact__day">середа</h4>
+         <span class="footer__contact__span">12:00 — 20:00</span>
+         <h4 class="footer__contact__day">четвер</h4>
+         <span class="footer__contact__span">12:00 — 20:00</span>
+         <h4 class="footer__contact__day">п’ятниця</h4>
+         <span class="footer__contact__span">11:00 — 19:00</span>
+         <h4 class="footer__contact__day">субота</h4>
+         <span class="footer__contact__span">11:00 — 19:00</span>
+         <h4 class="footer__contact__day">неділя</h4>
+
+         <p class="footer__contact__paragraph">
+          Вихідні понеділок, вівторок
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+         </p>
+        </div>
+        <div class="footer__contact__col--right">
+         <p class="footer__contact__paragraph--right">
+          вул. М. <br>
+          Грушевського, 6; <br>
+          Київ, 01001 <br>
+          тел. +38 (044)<br>
+          278-13-57
+          факс +38 (044) <br>
+          278-74-54 <br>
+          e-mail: <br>
+          info@namu.kiev.ua
+         </p>
+        </div>
+      </div>
+    </div>
+
+    <div class="ellipse__container">
+      <div class="ellipse__position">
+        <img class="ellipse" src="./images/project/Ellipse.svg" alt="ellipse">
+        <img  class="arrow-up" src="./images/project/arrow-up.svg" alt="arrow-up">
+      </div>
+    </div>
+
+    <div class="line"></div>
+
+    <div class="footer__links grid">
+      <span class="footer__links__link">Галерея</span>
+      <span class="footer__links__link">Про Нас</span>
+      <span class="footer__links__link">Виставки та події</span>
+      <span class="footer__links__link">Контакти</span>
+    </div>
+
+    <div class="designed">Designed by Zhyriada Marina</div>
+
+    <div class="copyright">Copyright © 2019. All Rights Reserved.</div>
+
+  </footer>
+
+  <script type="text/javascript" src="scripts/main.js"></script>
+</body>
+
 </html>
