--- a/src/index.html
+++ b/src/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html class="page" lang="en">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -29,24 +29,132 @@
             alt="logo"
           >
         </div>
+
         <a href="#menu" class="header__menu">
           <img src="./icons/menu.png" alt="menu">
         </a>
+
         <div class="header__content">
           <h1 class="header__content-title">ХУДОЖНІЙ
             <br>
             МУЗЕЙ
           </h1>
+
           <div class="header__content-button">
             <a href="#" class="header__content-link">КВИТКИ</a>
             <a href="#" class="header__content-arrow">
               <img src="./icons/arrow.png" alt="arrow button">
             </a>
           </div>
+
+          <a href="#events" class="header__content-line">події</a>
         </div>
       </div>
     </div>
     <!-- #Header  -->
+
+    <!--Aside  -->
+    <aside class="menu page__menu" id="menu">
+      <div class="menu__wrapper">
+        <div class="menu-top">
+          <a href="#" class="menu-top__link">
+            <img
+              class="menu-btn"
+              src="./icons/close-btn.png"
+              alt="close menu"
+            >
+          </a>
+
+          <ul class="menu-nav">
+            <li class="menu-nav__item">
+              <a href="#galery" class="menu-nav__link">Галерея</a>
+            </li>
+            <li class="menu-nav__item">
+              <a href="#about" class="menu-nav__link">Про Нас</a>
+            </li>
+            <li class="menu-nav__item">
+              <a href="#events" class="menu-nav__link">Виставки та <br>події</br></a>
+            </li>
+            <li class="menu-nav__item">
+              <a href="#contacts" class="menu-nav__link">Контакти</a>
+            </li>
+          </ul>
+        </div>
+
+        <div class="menu__schedule">
+          <h4 class="menu__schedule-title">Графік роботи</h4>
+
+          <ul class="menu__schedule-items">
+            <li class="menu__schedule-item"><strong>12:00 — 20:00</strong> середа</li>
+            <li class="menu__schedule-item"><strong>12:00 — 20:00</strong> четвер</li>
+            <li class="menu__schedule-item"><strong>12:00 — 20:00</strong> п’ятниця</li>
+            <li class="menu__schedule-item"><strong>11:00 — 19:00</strong> субота</li>
+            <li class="menu__schedule-item"><strong>11:00 — 19:00</strong> неділя</li>
+          </ul>
+
+          <p class="menu__schedule-info">
+            <strong>Вихідні:</strong> понеділок, вівторок
+            <span>
+              Каса припиняє роботу за 1 годину
+            </span>
+            <span>
+              до закриття музею
+            </span>
+          </p>
+        </div>
+      </div>
+    </aside>
+    <!--#Aside  -->
+
+    <!-- Events -->
+    <section class="events" id="events">
+      <div class="container">
+        <h2 class="events-title title">Актуальні події</h2>
+        <div class="events-cards">
+          <div class="events-card">
+            <img
+              class="events-card__image"
+              src="./images/events-card-1.png"
+              alt="events img"
+            >
+            <div class="events-card__content">
+              <div class="events-card__info">
+                <p class="events-card__sutitle">ВИСТАВКА</p>
+                <p class="events-card__date">26.08-29.11.2019</p>
+              </div>
+              <div class="events-card__title-container">
+                <h2 class="events-card__title">Йду і повертаюсь</h2>
+                <div class="events-card__title-mark"></div>
+              </div>
+              <p class="events-card__desc">
+                Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.
+              </p>
+            </div>
+          </div>
+          <div class="events-card">
+            <img
+              class="events-card__image"
+              src="./images/events-card-2.png"
+              alt="events img"
+            >
+            <div class="events-card__content">
+              <div class="events-card__info">
+                <p class="events-card__sutitle">ВИСТАВКА</p>
+                <p class="events-card__date">26.08-29.11.2019</p>
+              </div>
+              <div class="events-card__title-container">
+                <h2 class="events-card__title">І спогади і мрії</h2>
+                <div class="events-card__title-mark"></div>
+              </div>
+              <p class="events-card__desc">
+                Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».
+              </p>
+            </div>
+          </div>
+        </div>
+      </div>
+    </section>
+    <!-- #Events -->
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
