made changes according to the comments

--- a/src/index.html
+++ b/src/index.html
@@ -25,8 +25,8 @@
           <h1 class="header__title">ХУДОЖНІЙ<br>МУЗЕЙ</h1>
 
           <div class="header__bottom__container">
-            <a href="#" class="header__bottom__link">КВИТКИ</a>
-            <a href="#" class="header__bottom__button"><img src="./images/icons/arrow-white.svg" alt="logo"></a>
+            <a href="#expo" class="header__bottom__link">КВИТКИ</a>
+            <a href="#expo" class="header__bottom__button"><img src="./images/icons/arrow-white.svg" alt="logo"></a>
           </div>
         </div>
 
@@ -43,9 +43,9 @@
         <div class="menu__navigation">
           <a href="#gallery" class="menu__navigation__link">Галерея</a>
 
-          <a href="#expo" class="menu__navigation__link">Про Нас</a>
+          <a href="#about_us" class="menu__navigation__link">Про Нас</a>
 
-          <a href="#about_us" class="menu__navigation__link">Виставки та події</a>
+          <a href="#expo" class="menu__navigation__link">Виставки та події</a>
 
           <a href="#contacts" class="menu__navigation__link">Контакти</a>
         </div>
@@ -116,7 +116,7 @@
         </div>
       </section>
 
-      <section class="gallery">
+      <section class="gallery" id="gallery">
         <h2 class="gallery__title">Галерея</h2>
 
         <div class="gallery__slider">
@@ -178,9 +178,10 @@
                 required
               >
             </label>
-            <a href="#">
+
+            <button class="subscribe__input__button">
               <img src="./images/icons/arrow-black.svg" alt="arrow logo" class="subscribe__image">
-            </a>
+            </button>
           </div>
         </div>
       </section>
@@ -231,7 +232,7 @@
               </p>
             </div>
 
-            <div class="footer__contacts">
+            <div class="footer__contacts" id="contacts">
               <h2 class="footer__title">Контакти:</h2>
               <ul class="footer__list">
                 <li>
@@ -272,9 +273,9 @@
           <div class="footer__nav__list">
             <a href="#gallery" class="footer__nav__link">Галерея</a>
 
-            <a href="#expo" class="footer__nav__link">Про Нас</a>
+            <a href="#about_us" class="footer__nav__link">Про Нас</a>
 
-            <a href="#about_us" class="footer__nav__link">Виставки та події</a>
+            <a href="#expo" class="footer__nav__link">Виставки та події</a>
 
             <a href="#contacts" class="footer__nav__link">Контакти</a>
           </div>
