--- a/src/index.html
+++ b/src/index.html
@@ -3,11 +3,356 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
+    <title>Museum</title>
+    <link
+      rel="icon"
+      type="image/png"
+      href="images/logo.png"
+    >
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;700&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans&family=Montserrat:wght@400;700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
+    <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@700&family=Roboto:wght@400;500&family=Space+Grotesk:wght@700&family=Space+Mono&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="styles/main.scss">
+    <script src="https://code.jquery.com/jquery-3.6.4.min.js"></script>
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page">
+    <div class="upward"></div>
+    <div class="overlay"></div>
+
+    <header class="header" id="home">
+      <nav class="hamburger">
+        <a class="menuIcon icon icon__menu" onclick="on()"></a>
+        <a class="closeIcon icon icon__cross" onclick="off()"></a>
+      </nav>
+
+      <div class="header__background shading-overlay">
+        <a href="#" class="header__logo logo"></a>
+      </div>
+
+      <h1 class="title header__title">
+        ХУДОЖНІЙ
+        <br>
+        МУЗЕЙ
+      </h1>
+
+      <div class="button button--green header__button">
+        <a href="#" class="button__tickets">КВИТКИ</a>
+        <button href="#" class="button button__arrow button__arrow--green"></button>
+      </div>
+
+      <div class="smth">
+        <hr class="smth__line">
+        <p class="smth__text">ПОДІЇ</p>
+      </div>
+    </header>
+
+    <div class="menu">
+      <nav class="menu__links">
+        <ul class="menu__list">
+          <li class="menu__item">
+            <a href="#gallery"
+              class="menu__link"
+              onclick="off()">
+              Галерея
+            </a>
+          </li>
+          <li class="menu__item">
+            <a href="#home"
+              class="menu__link"
+              onclick="off()">
+              Про Hac
+            </a>
+          </li>
+          <li class="menu__item">
+            <a href="#events"
+              class="menu__link"
+              onclick="off()">
+              Виставки та події
+            </a>
+          </li>
+          <li class="menu__item">
+            <a href="#contact-us"
+              class="menu__link"
+              onclick="off()">
+              Контакти
+            </a>
+          </li>
+        </ul>
+      </nav>
+
+      <div class="line menu__line">
+        <hr class="line__horizontal line__horizontal--white">
+      </div>
+
+      <div class="menu__opening">
+        <h4 class="title title__fourth title__fourth--white">Графік роботи</h4>
+
+        <article class="menu__article">
+          <div class="menu__article--left">
+            <p><span class="menu__opening--bold">12:00 — 20:00</span> середа</p>
+            <p><span class="menu__opening--bold">12:00 — 20:00</span> четвер</p>
+            <p><span class="menu__opening--bold">12:00 — 20:00</span> п’ятниця</p>
+            <p><span class="menu__opening--bold">11:00 — 19:00</span> субота</p>
+            <p><span class="menu__opening--bold">11:00 — 19:00</span> неділя</p>
+          </div>
+
+          <div class="menu__article--right">
+            <span class="menu__opening--bold">Вихідні:</span> понеділок, вівторок
+            <br>
+            Kaca припиняє роботу за 1 годину
+            до закриття музею
+          </div>
+        </article>
+      </div>
+    </div>
+
+    <main class="main">
+      <section class="events" id="events">
+        <h2 class="title title__secondary events__title">
+          Актуальні події
+        </h2>
+
+        <img src="./images/events/events_image1.jpg"
+          alt="events-image"
+          class="picture events__picture"
+        >
+
+        <div class="events__content">
+          <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
+
+          <h3 class="title title__third title--rectangle">
+            Йду i повертаюсь
+          </h3>
+
+          <p class="events__info">
+            Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво
+            другої половини 1980-1995 років.
+          </p>
+        </div>
+
+        <img
+          src="./images/events/events_image2.jpg"
+          alt="events-image"
+          class="picture events__picture"
+        >
+
+        <div class="events__content">
+          <p class="events__date">ВИСТАВКА <span class="events__date--highlight">26.08-29.11.2019</span></p>
+
+          <h3 class="title title__third title--rectangle">
+            I спогади i мрії
+          </h3>
+
+          <p class="events__info">
+            Національний художній музей України до 100 річчя від дня народження видатної української художниці Тетяни
+            Яблонської відкриває ретроспективну ювілейну виставку «І спогади i мрії».
+          </p>
+        </div>
+      </section>
+
+      <section class="separator">
+        <div class="separator__image"></div>
+
+        <div class="separator__frame">
+          <p class="separator__date">ЛЕКЦІЯ <span class="separator__date--highlight">26/08/2019-11:00</span></p>
+
+          <h3 class="title title--separator">
+            Від класицизму до романтизму
+          </h3>
+        </div>
+      </section>
+
+      <section class="gallery" id="gallery">
+        <h2 class="title title__secondary">
+          Галерея
+        </h2>
+
+        <div class="gallery container-gallery">
+          <img src="./images/gallery/gallery_image1.jpg"
+            alt="gallery-image"
+            class="gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--1"
+          >
+
+          <img src="./images/gallery/gallery_image2.jpg"
+            alt="gallery-image"
+            class="gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--2"
+          >
+
+          <img src="./images/gallery/gallery_image3.jpg"
+            alt="gallery-image"
+            class="gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--3"
+          >
+
+          <img src="./images/gallery/gallery_image4.jpg"
+            alt="gallery-image"
+            class="gallery-desktop
+            gallery-desktop__image
+            gallery-desktop__image--4"
+          >
+        </div>
+
+        <div class="slider">
+          <div class="mySlides fade">
+            <img
+              src="./images/gallery/gallery_image1.jpg"
+              alt="gallery_image1"
+              class="gallery__picture"
+            >
+          </div>
+
+          <div class="mySlides fade">
+            <img
+              src="./images/gallery/gallery_image2.jpg"
+              alt="gallery_image2"
+              class="gallery__picture"
+            >
+          </div>
+
+          <div class="mySlides fade">
+            <img
+              src="./images/gallery/gallery_image3.jpg"
+              alt="gallery_image3" class="gallery__picture"
+            >
+          </div>
+
+          <div class="mySlides fade">
+            <img
+              src="./images/gallery/gallery_image4.jpg"
+              alt="gallery_image4" class="gallery__picture"
+            >
+          </div>
+        </div>
+
+        <div class="dots">
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+          <span class="dot"></span>
+        </div>
+      </section>
+
+      <section class="subscribe">
+        <div class="subscribe__background"></div>
+        <div class="subscribe__content">
+          <h2 class="title title__secondary title__secondary--subscribe">
+            Підписка
+          </h2>
+
+          <p class="subscribe__text">
+            Бути в курсі всіх актуальних подій та останніх новин.
+          </p>
+
+          <form id="subscribeForm" class="button button--red subscribe__button">
+            <input
+              name="email"
+              type="email"
+              id="email"
+              placeholder="E-mail"
+              class="button button__subscribe"
+              required
+            >
+            <button
+              class="button button__arrow button__arrow--red"
+              type="submit"
+              id="submit"
+            ></button>
+          </form>
+        </div>
+      </section>
+
+      <section class="contact-us" id="contact-us">
+        <div class="logo contact-us__logo"></div>
+        <div class="socials contact-us__socials">
+          <a href="https://www.facebook.com/"
+            class="socials__fb"
+            target="_blank">
+          </a>
+          <a href="https://www.instagram.com/"
+            class="socials__insta"
+            target="_blank">
+          </a>
+        </div>
+        <div class="opening contact-us__opening">
+          <h4 class="title title__fourth">Графік роботи</h4>
+
+          <article>
+            <p><span class="opening--hour">12:00 — 20:00</span> середа</p>
+            <p><span class="opening--hour">12:00 — 20:00</span> четвер</p>
+            <p><span class="opening--hour">12:00 — 20:00</span> п’ятниця</p>
+            <p><span class="opening--hour">11:00 — 19:00</span> субота</p>
+            <p><span class="opening--hour">11:00 — 19:00</span> неділя</p>
+            <br>
+            Вихідні понеділок, вівторок
+            <br>
+            Kaca припиняє роботу за 1 годину
+            до закриття музею
+          </article>
+        </div>
+
+        <address class="address contact-us__address">
+          <h4 class="title title__fourth">
+            Контакти:
+          </h4>
+
+          <a href="#"
+            class="address address__address">
+            вул. M. Грушевського, 6; Київ, 01001
+          </a>
+
+          <a href="tel:+38(044)-278-13-57"
+            class="address address__phone">
+            тел. +38 (044) 278-13-57
+          </a>
+
+          <a href="#"
+            class="address address__fax">
+            факс +38 (044)<span class="address__fax--br"> 278-74-54</span>
+          </a>
+
+          <a href="mailto:info@namu.kiev.ua"
+            class="address address__email">
+            e-mail: info@namu.kiev.ua
+          </a>
+        </address>
+
+        <div class="line contact-us__line">
+          <hr class="line__horizontal line__horizontal--vertical">
+        </div>
+
+        <nav class="links contact-us__links">
+          <ul class="links__list">
+            <li class="links__item"><a href="#gallery" class="links__link">Галерея</a></li>
+            <li class="links__item"><a href="#home" class="links__link">Про Hac</a></li>
+            <li class="links__item"><a href="#events" class="links__link">Виставки та події</a></li>
+            <li class="links__item"><a href="#contact-us" class="links__link">Контакти</a></li>
+          </ul>
+        </nav>
+      </section>
+    </main>
+
+    <footer class="footer">
+      <p class="footer__text">Designed by Zhyriada Marina</p>
+      <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
+    </footer>
+
+    <script>
+      function on() {
+        document.getElementsByClassName("overlay").style.display = "block";
+      }
+
+      function off() {
+        document.getElementsByClassName("overlay").style.display = "none";
+      }
+    </script>
+
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
