--- a/src/index.html
+++ b/src/index.html
@@ -39,7 +39,7 @@
 
       <div class="button button--green header__button">
         <a href="#" class="button__tickets">КВИТКИ</a>
-        <button href="#" class="button button__arrow button__arrow--green"></button>
+        <button class="button button__arrow button__arrow--green"></button>
       </div>
 
       <div class="smth">
@@ -298,9 +298,9 @@
         </div>
 
         <address class="address contact-us__address">
-          <h4 class="title title__fourth">
+          <p class="title title__fourth">
             Контакти:
-          </h4>
+          </p>
 
           <a href="#"
             class="address address__address">
