made changes according to the comments

--- a/src/index.html
+++ b/src/index.html
@@ -117,47 +117,49 @@
       </section>
 
       <section class="gallery" id="gallery">
-        <h2 class="gallery__title">Галерея</h2>
+        <div class="gallery__wrapper">
+          <h2 class="gallery__title">Галерея</h2>
 
-        <div class="gallery__slider">
-          <div>
-            <img
-              src="./images/gallery/gallery.png"
-              alt="image"
-              class="gallery__image gallery__image--tall"
-            >
+          <div class="gallery__slider">
+            <div>
+              <img
+                src="./images/gallery/gallery.png"
+                alt="image"
+                class="gallery__image gallery__image--tall"
+              >
+            </div>
+
+            <div>
+              <img
+                src="./images/gallery/gallery-3.png"
+                alt="image"
+                class="gallery__image gallery__image--big"
+              >
+            </div>
+
+            <div>
+              <img
+                src="./images/gallery/gallery-4.png"
+                alt="image"
+                class="gallery__image gallery__image--long"
+              >
+            </div>
+
+            <div>
+              <img
+                src="./images/gallery/gallery-5.png"
+                alt="image"
+                class="gallery__image gallery__image--short"
+              >
+            </div>
           </div>
 
-          <div>
-            <img
-              src="./images/gallery/gallery-3.png"
-              alt="image"
-              class="gallery__image gallery__image--big"
-            >
+          <div class="gallery__slider__items">
+            <span class="gallery__dot" onclick="currentSlide(1)"></span>
+            <span class="gallery__dot" onclick="currentSlide(2)"></span>
+            <span class="gallery__dot" onclick="currentSlide(3)"></span>
+            <span class="gallery__dot" onclick="currentSlide(4)"></span>
           </div>
-
-          <div>
-            <img
-              src="./images/gallery/gallery-4.png"
-              alt="image"
-              class="gallery__image gallery__image--long"
-            >
-          </div>
-
-          <div>
-            <img
-              src="./images/gallery/gallery-5.png"
-              alt="image"
-              class="gallery__image gallery__image--short"
-            >
-          </div>
-        </div>
-
-        <div class="gallery__slider__items">
-          <span class="gallery__dot" onclick="currentSlide(1)"></span>
-          <span class="gallery__dot" onclick="currentSlide(2)"></span>
-          <span class="gallery__dot" onclick="currentSlide(3)"></span>
-          <span class="gallery__dot" onclick="currentSlide(4)"></span>
         </div>
       </section>
 
@@ -166,23 +168,23 @@
           <h2 class="subscribe__title">Підписка</h2>
           <p class="subscribe__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-          <div class="subscribe__input__conteiner">
+          <form action="for submit" class="subscribe__input__conteiner">
             <label for="email">
               <input
                 type="email"
-                pattern=".+@example\.com"
-                placeholder="E-mail"
-                size="30"
                 id="email"
-                class="subscribe__input"
-                required
+                pattern=".+@example\.com"
+                size="30"
+                placeholder="E-mail"
+                 class="subscribe__input"
+                 required
               >
             </label>
 
-            <button class="subscribe__input__button">
+            <button class="subscribe__input__button" type="submit">
               <img src="./images/icons/arrow-black.svg" alt="arrow logo" class="subscribe__image">
             </button>
-          </div>
+          </form>
         </div>
       </section>
     </main>
