made changes according to the comments

--- a/src/index.html
+++ b/src/index.html
@@ -168,7 +168,7 @@
           <h2 class="subscribe__title">Підписка</h2>
           <p class="subscribe__description">Бути в курсі всіх актуальних подій та останніх новин.</p>
 
-          <form action="for submit" class="subscribe__input__conteiner">
+          <form class="subscribe__input__conteiner">
             <label for="email">
               <input
                 type="email"
