demo link should work now

--- a/src/index.html
+++ b/src/index.html
@@ -345,11 +345,17 @@
 
     <script>
       function on() {
-        document.getElementsByClassName("overlay").style.display = "block";
+        var overlays = document.getElementsByClassName("overlay");
+        if (overlays.length > 0) {
+          overlays[0].style.display = "block";
+        }
       }
 
       function off() {
-        document.getElementsByClassName("overlay").style.display = "none";
+        var overlays = document.getElementsByClassName("overlay");
+        if (overlays.length > 0) {
+          overlays[0].style.display = "none";
+        }
       }
     </script>
 
