trying fix hrefs

--- a/src/index.html
+++ b/src/index.html
@@ -114,7 +114,7 @@
           Актуальні події
         </h2>
 
-        <img src="./images/events/events_image1.jpg"
+        <img src="images/events/events_image1.jpg"
           alt="events-image"
           class="picture events__picture"
         >
@@ -133,7 +133,7 @@
         </div>
 
         <img
-          src="./images/events/events_image2.jpg"
+          src="images/events/events_image2.jpg"
           alt="events-image"
           class="picture events__picture"
         >
@@ -170,28 +170,28 @@
         </h2>
 
         <div class="gallery container-gallery">
-          <img src="./images/gallery/gallery_image1.jpg"
+          <img src="images/gallery/gallery_image1.jpg"
             alt="gallery-image"
             class="gallery-desktop
             gallery-desktop__image
             gallery-desktop__image--1"
           >
 
-          <img src="./images/gallery/gallery_image2.jpg"
+          <img src="images/gallery/gallery_image2.jpg"
             alt="gallery-image"
             class="gallery-desktop
             gallery-desktop__image
             gallery-desktop__image--2"
           >
 
-          <img src="./images/gallery/gallery_image3.jpg"
+          <img src="images/gallery/gallery_image3.jpg"
             alt="gallery-image"
             class="gallery-desktop
             gallery-desktop__image
             gallery-desktop__image--3"
           >
 
-          <img src="./images/gallery/gallery_image4.jpg"
+          <img src="images/gallery/gallery_image4.jpg"
             alt="gallery-image"
             class="gallery-desktop
             gallery-desktop__image
@@ -202,7 +202,7 @@
         <div class="slider">
           <div class="mySlides fade">
             <img
-              src="./images/gallery/gallery_image1.jpg"
+              src="images/gallery/gallery_image1.jpg"
               alt="gallery_image1"
               class="gallery__picture"
             >
@@ -210,7 +210,7 @@
 
           <div class="mySlides fade">
             <img
-              src="./images/gallery/gallery_image2.jpg"
+              src="images/gallery/gallery_image2.jpg"
               alt="gallery_image2"
               class="gallery__picture"
             >
@@ -218,14 +218,14 @@
 
           <div class="mySlides fade">
             <img
-              src="./images/gallery/gallery_image3.jpg"
+              src="images/gallery/gallery_image3.jpg"
               alt="gallery_image3" class="gallery__picture"
             >
           </div>
 
           <div class="mySlides fade">
             <img
-              src="./images/gallery/gallery_image4.jpg"
+              src="images/gallery/gallery_image4.jpg"
               alt="gallery_image4" class="gallery__picture"
             >
           </div>
