fixed scroll the menu

--- a/src/index.html
+++ b/src/index.html
@@ -9,13 +9,17 @@
   </head>
   <body class="page__body">
     <header class="header">
+      <!-- <div class="header__bg-wrapper"> -->
+      <!-- <div class="header__bg-div"></div> -->
       <img
         src="./images/header-bg.png"
         alt="NAMU-logo"
         class="header__bg"
       >
+      <!-- </div> -->
 
-      <div class="header__title__div">
+      <!-- <div class="header__content-wrapper"> -->
+      <div class="header__title-div">
         <h1 class="header__main-title">ХУДОЖНІЙ МУЗЕЙ</h1>
 
         <a class="header__tickets-link" href="#actual">КВИТКИ</a>
@@ -29,8 +33,7 @@
           alt="NAMU-logo"
         >
       </a>
-
-      <div class="header__bg"></div>
+      <!-- </div> -->
     </header>
 
     <aside class="aside page__menu" id="menu">
