--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,79 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="en" class="page">
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
+    <title>NAMU</title>
     <link rel="stylesheet" href="./styles/main.scss">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=Manrope:wght@400;700&family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com">
+    <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&family=Manrope:wght@400;700&family=Montserrat:wght@400;700&family=Roboto:wght@400;500;700&display=swap" rel="stylesheet">
   </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
+  <body class="page_body">
+    <header class="header">
+      <div class="header_wrapper">
+        <div class="header_block1">
+          <a href="#menu" class="icon icon--menu"></a>
+          <h2 class="header_block1_title">ХУДОЖНІЙ МУЗЕЙ</h2>
+          <a class="header_block1_tickets">
+            <p class="tickets_name">Квитки</p>
+            <div class="tickets_button button">
+              >
+            </div>
+            <div class="header_block1_events">
+              <p class="header_block1_events_name wordstyle--grey">Події</p>
+              <div class="header_block1_events_underline underline"></div>
+            </div>
+          </a>
+        </div>
+        <div class="header_block2">
+          <h1 class="section-title">
+            MA
+            <br>
+            NU
+          </h1>
+        </div>
+      </div>
+    </header>
+
+    <aside class="page_menu menu" id="menu">
+      <div class="menu-wrapper">
+        <a href="#" class="icon icon--close">
+        </a>
+        <nav class="nav menu__nav">
+          <ul class="nav__list">
+            <li class="nav__item">
+              <a class="nav__link" href="#gallery">Галерея</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#exhibition">Виставки та події</a>
+            </li>
+          </ul>
+          <ul class="nav__list2">
+            <li class="nav__item">
+              <a class="nav__link" href="#about">Про нас</a>
+            </li>
+            <li class="nav__item">
+              <a class="nav__link" href="#contacts">Контакти</a>
+            </li>
+          </ul>
+        </nav>
+        <div class="menu_underline"></div>
+        <p class="menu_schedule schedule">Графік роботи</p>
+        <p class="menu_schedule_workdays workdays">12:00 — 20:00 середа</p>
+        <p class="menu_schedule_workdays workdays">12:00 — 20:00 четвер</p>
+        <p class="menu_schedule_workdays workdays">12:00 — 20:00 п’ятниця</p>
+        <p class="menu_schedule_workdays workdays">11:00 — 19:00 субота</p>
+        <p class="menu_schedule_workdays workdays">11:00 — 19:00 субота</p>
+        <p class="menu_weekend weekend">
+          Вихідні: понеділок, вівторок<br>
+        Каса припиняє роботу за 1 годину до закриття музею
+        </p>
+      </div>
+    </aside>
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
 </html>
