--- a/src/index.html
+++ b/src/index.html
@@ -1,13 +1,244 @@
 <!DOCTYPE html>
-<html lang="en">
-  <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Title</title>
-    <link rel="stylesheet" href="./styles/main.scss">
-  </head>
-  <body>
-    <h1>Hello Mate Academy</h1>
-    <script type="text/javascript" src="scripts/main.js"></script>
-  </body>
+<html lang="en" class="page">
+<head>
+  <meta charset="UTF-8">
+  <title>Art Museum Header</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <link rel="icon" type="image/x-icon" href="./images/NAMU.svg">
+  <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.1/font/bootstrap-icons.css">
+  <link rel="stylesheet" href="./styles/main.scss">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Montserrat:wght@400;500;600;700;800&display=swap" rel="stylesheet">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=IBM+Plex+Sans:wght@300;400;500;600;700&display=swap" rel="stylesheet">
+</head>
+<body>
+  <header class="header">
+    <div class="top-bar__wrap">
+      <div class="top-bar">
+        <a href="#menu" class="topbar__icon-menu icons mobile-show"></a>
+        <div class="top-bar__logo"></div>
+      </div>
+    </div>
+    <div class="header__bottom">
+      <a href="#menu" class="topbar__icon-menu icons header__icon-hidden"></a>
+      <h1 class="header__title">ХУДОЖНІЙ МУЗЕЙ</h1>
+      <div class="header__mixed">
+        <div class="header__tickets">
+          <span class="header__tickets-text">Квитки</span>
+        </div>
+        <button class="header__button">
+          <a href="#" class="header__button-text">
+            <img
+              src="./images/icons/header-arrow-right.svg"
+              alt="arrow"
+              class="header__image"
+            >
+          </a>
+        </button>
+      </div>
+    </div>
+
+  </header>
+
+  <aside class="menu" id="menu">
+    <div class="menu__top-bar">
+      <a href="#" class="menu__close-icon icons"></a>
+      <div class="menu__elements">
+        <span class="menu__text">
+          Галерея
+        </span>
+        <span class="menu__text">
+          Виставки та події
+        </span>
+      </div>
+      <div class="menu__elements">
+        <span class="menu__text">
+          Про Нас
+        </span>
+        <span class="menu__text">
+          Контакти
+        </span>
+      </div>
+    </div>
+    <div class="menu__bottom">
+      <div class="menu__bottom-wrap">
+        <span class="menu__bottom-text">Графік роботи</span>
+        <div class="menu__time-text">
+          <span class="menu__bottom-text">
+            <strong>12:00 — 20:00</strong> середа <br>
+            <strong>12:00 — 20:00</strong> четвер <br>
+            <strong>12:00 — 20:00</strong> п’ятниця <br>
+            <strong>11:00 — 19:00</strong> субота <br>
+            <strong>11:00 — 19:00</strong> неділя
+          </span>
+        </div>
+      </div>
+
+      <span class="menu__bottom-text ggg">
+        <strong>Вихідні</strong>: понеділок, вівторок <br>
+        Каса припиняє роботу за 1 годину
+        до закриття музею
+      </span>
+    </div>
+  </aside>
+
+  <main class="main">
+    <section class="section relevant">
+      <h1 class="relevant__title">Актуальні події</h1>
+      <article class="relevant__wrap">
+        <div class="relevant__image"></div>
+        <div class="relevant__mixed">
+          <span class="relevant__mixed-type">ВИСТАВКА</span>
+          <span class="relevant__mixed-data">26.08-29.11.2019</span>
+        </div>
+        <span class="relevant__subtitle-first relevant__subtitle">Йду і повертаюсь</span>
+        <p class="relevant__main-text">Національний Художній Музей України презентує унікальну частину колекції Градобанку - українське мистецтво другої половини 1980-1995 років.</p>
+      </article>
+
+      <article class="relevant__wrap">
+        <div class="relevant__image relevant__image-second"></div>
+        <div class="relevant__mixed">
+          <span class="relevant__mixed-type">ВИСТАВКА</span>
+          <span class="relevant__mixed-data">26.08-29.11.2019</span>
+        </div>
+        <span class="relevant__subtitle-second relevant__subtitle">І спогади і мрії</span>
+        <p class="relevant__main-text">Національний художній музей України до 100 річчя від дня народження   видатної української художниці  Тетяни Яблонської  відкриває ретроспективну ювілейну виставку «І спогади і мрії».</p>
+      </article>
+
+      <div class="relevant__last">
+        <img
+          src="./images/relevant-third.svg"
+          alt="image"
+          class="relevant__last-image"
+        >
+        <div class="relevant__last-block">
+          <div class="relevant__last-mixed">
+            <span class="relevant__last-first-text">ЛЕКЦІЯ</span>
+            <span class="relevant__last-second-text">26/08/2019 - 11:00</span>
+          </div>
+          <p class="relevant__text">Від класицизму до романтизму</p>
+        </div>
+      </div>
+    </section>
+    <section class="section gallery">
+      <h1 class="gallery__title">Галерея</h1>
+      <div class="gallery__slider">
+        <img
+          src="./images/gallery-image.svg"
+          alt="slider-image"
+          class="gallery__image"
+        >
+        <div class="gallery__dots">
+          <div class="gallery__dot active"></div>
+          <div class="gallery__dot"></div>
+          <div class="gallery__dot"></div>
+          <div class="gallery__dot"></div>
+        </div>
+      </div>
+    </section>
+    <section class="section subscribe">
+      <div class="subscribe__wrap">
+        <h1 class="subscribe__title">Підписка</h1>
+        <span class="subscribe__subtitle">Бути в курсі всіх актуальних подій та останніх новин.</span>
+        <form
+          class="subscribe__form"
+          action="http://localhost:8080/"
+          onsubmit="this.reset(); return false"
+          autocomplete="off"
+        >
+          <input
+            type="email"
+            class="subscribe__input"
+            placeholder="E-mail"
+            required
+          />
+          <button class="subscribe__button">
+            <img
+              src="./images/icons/subscribe-arrow-right.svg"
+              alt="arrow"
+              class="subscribe__arrow"
+            >
+          </button>
+        </form>
+      </div>
+    </section>
+  </main>
+
+  <footer class="footer">
+    <div class="footer__top">
+      <div class="footer__top-logo"></div>
+      <div class="footer__icons">
+        <div class="footer__facebook icons"></div>
+        <div class="footer__instagram icons"></div>
+      </div>
+    </div>
+    <div class="footer__average">
+      <div class="footer__schedule">
+        <span class="footer__schedule-title">Графік роботи</span>
+        <span class="footer__schedule-info">
+          <strong>12:00— 20:00</strong>
+          середа <br>
+          <strong>12:00— 20:00</strong>
+          четвер <br>
+          <strong>12:00 — 20:00</strong>
+          п’ятниця <br>
+          <strong>11:00 — 19:00</strong>
+          субота <br>
+          <strong>11:00 — 19:00</strong>
+          неділя <br>
+          <br>
+          Вихідні понеділок, вівторок <br>
+          Каса припиняє роботу за 1 годину
+          до закриття музею
+        </span>
+      </div>
+      <div class="footer__contact-us">
+        <span class="footer__schedule-title">Контакти:</span>
+        <span class="footer__schedule-info">
+          вул. М. Грушевського, 6; Київ, 01001
+          тел. +38 (044) 278-13-57
+          факс +38 (044) 278-74-54
+          e-mail: info@namu.kiev.ua
+        </span>
+      </div>
+      <a href="#" class="footer__btn-to-top">
+        <img
+          src="./images/icons/footer_arrow-up.svg"
+          alt="arrow-up"
+          class="footer__arrow-up"
+        >
+      </a>
+    </div>
+    <div class="footer__bottom">
+      <div class="footer__wrap">
+        <div class="footer__menu__elements first">
+          <span class="footer__menu__text">
+            Галерея
+          </span>
+          <span class="footer__menu__text">
+            Виставки та події
+          </span>
+        </div>
+        <div class="footer__menu__elements second">
+          <span class="footer__menu__text">
+            Про Нас
+          </span>
+          <span class="footer__menu__text">
+            Контакти
+          </span>
+        </div>
+      </div>
+    </div>
+    <div class="footer__end">
+      <span class="footer__end-text footer__end-text-first">Designed by Zhyriada Marina</span>
+      <span class="footer__end-text footer__end-text-second">Copyright © 2019. All Rights Reserved.</span>
+    </div>
+  </footer>
+
+  <script src="./scripts/main.js"></script>
+</body>
 </html>
