made function to close menu when click the link

--- a/src/index.html
+++ b/src/index.html
@@ -27,7 +27,7 @@
         <a class="closeIcon icon icon__cross" onclick="off()"></a>
       </nav>
 
-      <div class="header__background shading-overlay">
+      <div class="header__background">
         <a href="#" class="header__logo logo"></a>
       </div>
 
@@ -54,28 +54,28 @@
           <li class="menu__item">
             <a href="#gallery"
               class="menu__link"
-              onclick="off()">
+            >
               Галерея
             </a>
           </li>
           <li class="menu__item">
             <a href="#home"
               class="menu__link"
-              onclick="off()">
+            >
               Про Hac
             </a>
           </li>
           <li class="menu__item">
             <a href="#events"
               class="menu__link"
-              onclick="off()">
+            >
               Виставки та події
             </a>
           </li>
           <li class="menu__item">
             <a href="#contact-us"
               class="menu__link"
-              onclick="off()">
+            >
               Контакти
             </a>
           </li>
@@ -342,22 +342,6 @@
       <p class="footer__text">Designed by Zhyriada Marina</p>
       <p class="footer__text">Copyright © 2019. All Rights Reserved.</p>
     </footer>
-
-    <script>
-      function on() {
-        var overlays = document.getElementsByClassName("overlay");
-        if (overlays.length > 0) {
-          overlays[0].style.display = "block";
-        }
-      }
-
-      function off() {
-        var overlays = document.getElementsByClassName("overlay");
-        if (overlays.length > 0) {
-          overlays[0].style.display = "none";
-        }
-      }
-    </script>
 
     <script type="text/javascript" src="scripts/main.js"></script>
   </body>
